fix: align prices

--- a/src/components/MarketDataTable/MarketDataTable.scss
+++ b/src/components/MarketDataTable/MarketDataTable.scss
@@ -31,6 +31,10 @@
                 flex-direction: row;
                 gap: var(--gap-scale-1);
             }
+
+            &:last-child .market-table__row-field-data {
+                justify-content: flex-end;
+            }
         }
 
         &:last-child {
